trunk/Archive2/47/e4e1692a724d6b/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:12:20: error: expected ')' before 'startVal'
         Derived(T2 startVal):var(startVal){}
                    ^
main.cpp:14:9: error: 'T2' does not name a type
         T2 var;    
         ^
main.cpp: In function 'int main()':
main.cpp:25:14: warning: unused variable 'da' [-Wunused-variable]
   Derived<A> da;
              ^
main.cpp:26:14: warning: unused variable 'db' [-Wunused-variable]
   Derived<B> db;
              ^
